2.5

- FFTW updated to 3.2.2
- Added Entropy Otsu segmentation to xmipp_volume_segment
- Added -min, -max, -which_min, -which_max to xmipp_operate
- Speed up of xmipp_mpi_class_averages
- Better estimations of energy in xmipp_detect_structures
- Bug fix in xmipp_detect_missing_wedge
- Differential Evolution (de_solver in /data) now uses Xmipp's own Random
generator, seems to solve a problem with heap corruption.

2.4

...

1.1

- New program: xmipp_MLrefine3D
- New program: xmipp_sort_junk
- New building system based on SCons (under testing)
- Improved xmipp_split_selfile
- Added remove_dust option in normalize
- Cleaned up CVS hierarchy
- Added .cvsignore file
- Cleaned auto.sh
- ...

0.9.1

- corrected template specialization bug
- corected xmippError includes
- correct compilation in PGI compilers
- ...