@@ -8,6 +8,7 @@
 - Bug fix in xmipp_detect_missing_wedge
 - Differential Evolution (de_solver in /data) now uses Xmipp's own Random
 generator, seems to solve a problem with heap corruption.
+- Bug fix when reading the family name of the position file in xmipp_micrograph_mark
 
 2.4
 
